SFDCProject/src/objects/Partner_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Select the partner who this contract applies to</description>
        <inlineHelpText>Select the partner who this contract applies to</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Contracts</relationshipLabel>
        <relationshipName>Partner_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alignment_Meeting_Scheduled_Date__c</fullName>
        <inlineHelpText>For Select/Prefered Only</inlineHelpText>
        <label>Alignment Meeting Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>April__c</fullName>
        <label>April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <label>August</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Term_months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto Renewal Term (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concerns_or_Comments__c</fullName>
        <label>Concerns or Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Signed_on__c</fullName>
        <description>Select the date when the confidentiality agreement was signed</description>
        <inlineHelpText>Select the Account Manager/ Account Owner for the partner</inlineHelpText>
        <label>Confidentiality Agreement Signed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expires_in_days__c</fullName>
        <formula>Expiration_Date__c - TODAY()</formula>
        <label>Contract Expires in (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Number_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Id,  Contract_Number__c, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <externalId>true</externalId>
        <label>Contract Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_Date__c</fullName>
        <label>Contract Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Select the contract type</description>
        <inlineHelpText>Select the contract type</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Approval_Date__c</fullName>
        <label>Customer Care Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Guaranteed_to_Subst_Completion__c</fullName>
        <label>Days Guaranteed to Subst. Completion</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>December</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Fee_Applies_If__c</fullName>
        <label>Delay Fee Applies If</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delayed_Project_Fee_Project__c</fullName>
        <label>Delayed Project Fee ($/Project)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Select the date from which this contract is effective</description>
        <inlineHelpText>Select the date from which this contract is effective</inlineHelpText>
        <label>Effective From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date_1__c</fullName>
        <label>Effective End Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date_1__c</fullName>
        <label>Effective Start Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusivity_Terms__c</fullName>
        <label>Exclusivity Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclusivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Territory_Notice__c</fullName>
        <label>Existing Territory Notice (days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Select the date till when this contract is effective</description>
        <inlineHelpText>Select the date till when this contract is effective</inlineHelpText>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <label>February</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Operations_Approval_Date__c</fullName>
        <label>Fleet Operations Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HI_Exemption__c</fullName>
        <label>HI Exemption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITC_Fee_Applies_If__c</fullName>
        <label>ITC Fee Applies If</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITC_Jeopardy_Fee_of_EPC__c</fullName>
        <label>ITC Jeopardy Fee (% of EPC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Coverage Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration_Date__c</fullName>
        <label>Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <label>January</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>June</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Term_months__c</fullName>
        <label>Length of Term (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M0_Payment_Terms__c</fullName>
        <inlineHelpText>Business days</inlineHelpText>
        <label>M0 Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M0_Percentage_1__c</fullName>
        <label>M0 Percentage 1</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M0_Percentage__c</fullName>
        <label>M0 Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Payment_Terms__c</fullName>
        <label>M1 Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M1_Percentage_1__c</fullName>
        <label>M1 Percentage 1</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_percentage__c</fullName>
        <label>M1 Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Payment_Terms__c</fullName>
        <label>M2 Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2_Percentage_1__c</fullName>
        <label>M2 Percentage 1</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Percentage__c</fullName>
        <label>M2 Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>March</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Territory_Notice__c</fullName>
        <label>New Territory Notice (days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Contract_Terms__c</fullName>
        <description>Add the non-standard contract terms here</description>
        <inlineHelpText>Add the non-standard contract terms here</inlineHelpText>
        <label>Non Standard Contract Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <label>November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <label>October</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Account Manager/ Account Owner for the partner</description>
        <inlineHelpText>Select the Account Manager/ Account Owner for the partner</inlineHelpText>
        <label>Partner Account Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <formula>Text( Account__r.Partner_Tier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Requirements_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photo Requirements Apply?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Approval_Date__c</fullName>
        <label>Project Finance Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Period_days__c</fullName>
        <label>Renewal Notice Period (days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rules_of_Engagement_Apply__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rules of Engagement Apply?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Deadline_Date__c</fullName>
        <description>Indicates date when Sunrun operations will stop accepting new contracts</description>
        <label>Sales Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sign_Date__c</fullName>
        <description>Select the date when this contract was signed</description>
        <inlineHelpText>Select the date when this contract was signed</inlineHelpText>
        <label>Sign Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solar_Customer_Agreement_no__c</fullName>
        <description>Enter the solar customer agreement number</description>
        <inlineHelpText>Enter the solar customer agreement number</inlineHelpText>
        <label>Solar Customer Agreement no.</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_incorp__c</fullName>
        <inlineHelpText>Enter the two letter abbreviation for the US state</inlineHelpText>
        <label>State of Incorporation</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF (Expiration_Date__c &lt; TODAY(), &apos;Expired&apos;, &apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunrun_Branded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunrun Branded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_of_Renewal__c</fullName>
        <label>Terms of Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_project_guaranteed_by__c</fullName>
        <label>% of Projects Covered by Guarantee</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Partner Contract</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Insurance_Expiration_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Insurance_Expiration_Date__c  &lt; TODAY ()</errorConditionFormula>
        <errorDisplayField>Insurance_Expiration_Date__c</errorDisplayField>
        <errorMessage>Insurance Expiration date cannot be a date in past</errorMessage>
    </validationRules>
</CustomObject>